[package]
name = "is_false"
description = "Is it false?"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

license = "MIT"
repository = "https://github.com/PatriotRossii/is_false/"
documentation = "https://docs.rs/is_false/"
readme = "README.md"

categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_true = "0.1"